
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 NOV 03b
  * in src/bdry.c
    - in read_bdry(), fixed a bug related to the call of the functions _x(), _y(),
      _x_global(), _y_global() in the module Bdry() when using MPI.
      

2022 NOV 03a
  * in lib/exm/exm.c
    - in EXM_angle_between_vectors(), now calls EXM_normalize_vector()
    - added EXM_normalize_vector()
    - added EXM_find_rotation_matrix()
    - added EXM_multiply_matrix_vector()
  * in lib/gridg/3Dbase.c
    - added function _distance()
    - rewrote entirely the function Plane() in general form using the rotation matrix; fixes
      issues we had previously with this function
  * in lib/gridg/share.c
    - added GRIDG_al3()
    - added GRIDG_find_ijk_from_l()
    

2022 OCT 28a
  * in cycle/share/cycle_share.c
    - in update_linked_nodes(), fixed a bug that occurred when using MPI and nodes linked together
      through the Bdry(Link()) command: when the linked inner nodes were not aligned with the linked
      boundary nodes along the same axis (either i, j, of k), the function update_linked_nodes()
      did not link the proper nodes together
    - in update_runtime_codex_xi_from_gl(), added 1 to flux_ximax before sending it to the codex
      variables so that flux_ximax of 1 corresponds to the 1st component of the vector not the 2nd
  * in bin
    - added pipeflow3D.wrp
    - renamed circle.wrp to cylinderinnerflow2D.wrp 
    - renamed cylinder_in_freestream.wrp to cylindercrossflow2D.wrp
    

2022 OCT 25a
  * in cycle/_*/cycle.c
    - in write_runtime_template(), added the parameter flux_ximax
  * in cycle/res/_generic/res.c
    - in update_residual(), calls find_xi() instead of _xi()
  * in cycle/share/cycle_share.c